css/announcements.css
*,
*::before,
*::after {
	box-sizing: border-box;
}

html {
	font-size: 14px;
}

body {
	background-color: #f5f7fa;
	color: #69707a;
	font: normal 1rem/1.428571428571429 "Helvetica Neue", "Helvetica", "Arial", sans-serif;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: antialiased;
	scroll-behavior: smooth;
	text-rendering: optimizeLegibility;
}

a {
	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
	-webkit-tap-highlight-color: transparent;
	color: #222324;
	text-decoration: none;
	transition: color 0.3s ease;
}

a:hover {
	color: #e62b8a;
}

a:focus {
	outline: 1px dashed currentColor;
	outline-offset: 2px;
}

img {
	height: auto;
	max-width: 100%;
	vertical-align: top;
}

.img-block {
	display: block;
	margin-left: auto;
	margin-right: auto;
}

/* Text meant only for screen readers. */
.screen-reader-text {
	border: 0;
	clip: rect(1px, 1px, 1px, 1px);
	clip-path: inset(50%);
	height: 1px;
	margin: -1px;
	overflow: hidden;
	padding: 0;
	position: absolute !important;
	width: 1px;
	word-wrap: normal !important;
}

.conventions {
	min-height: 100vh;
}

.hero {
	background-color: #fff;
	border: 5px solid #000;
	position: relative;
}

.twitter-top {
	bottom: 10px;
	position: absolute;
	right: 10px;
}

.twitter-top > * {
	display: block;
}

.nav-bar {
	background-color: #f5f7fa;
	margin-bottom: 20px;
	margin-top: 1rem;
}

.menu {
	background-color: #fff;
	border: 5px solid #000;
	list-style-type: none;
	margin: 0 20px;
	max-width: 960px;
	padding: 1.5em 0 0.5em;
	text-align: center;
	transition: border-color 0.2s ease;
}

.menu li {
	margin-bottom: 1rem;
}

.menu .item {
	border-bottom: 5px solid transparent;
	color: #222324;
	display: inline-block;
	padding: 0 5px;
	text-decoration: none;
	vertical-align: top;
}

.menu .item:focus {
	outline: 1px dashed #000;
	outline-offset: 2px;
}

.menu .item.is-past {
	opacity: 0.5;
	transition: opacity 0.3s ease;
}

.menu .item.is-past:hover,
.menu .item.is-past:focus {
	opacity: 1;
}

.menu .item .convention-title {
	font-size: 1.65em;
	font-weight: 300;
	line-height: 1;
	margin: 0;
}

.menu .item .convention-dates {
	font-size: 11px;
	letter-spacing: 1px;
	margin-bottom: 5px;
	margin-top: 0;
	opacity: 0;
	text-transform: uppercase;
	transition: opacity 0.3s ease;
}

.menu .item.is-next .convention-dates,
.menu .item:hover .convention-dates,
.menu .item:focus .convention-dates {
	opacity: 1;
}

.menu .item.is-next {
	border-color: #e62b8a;
}

/*#countdown-holder {
	color: #fff;
	margin: 0 auto;
	padding: 0 0.5rem;
}*/

.header-bar {
	padding-top: 8px;
}

.header-bar,
.content {
	margin: 0 20px;
	max-width: 960px;
}

.content {
	display: flex;
	flex-direction: column;
}

.notification {
	background-color: #e62b8a;
	border-radius: 3px;
	color: #fff;
	margin-bottom: 20px;
	order: -1;
	padding: 16px 20px;
	position: relative;
}

.notification p {
	margin: 0;
	padding-right: 8px;
}

.delete {
	-webkit-appearance: none;
	-moz-appearance: none;
	appearance: none;
	background-color: rgba(0, 0, 0, 0.2);
	border: 0 none;
	border-radius: 0 3px;
	color: #fff;
	cursor: pointer;
	display: inline-block;
	height: 24px;
	position: absolute;
	right: 0;
	top: 0;
	transition: background-color 0.3s ease;
	-webkit-user-select: none;
	-moz-user-select: none;
	user-select: none;
	vertical-align: top;
	width: 24px;
}

.delete:hover {
	background-color: rgba(0, 0, 0, 0.5);
}

/* Convention Styles */
.convention-info {
	border-left: 10px solid transparent;
	margin-left: -10px;
}

.convention-info.is-next {
	border-color: #e62b8a;
	order: -1;
}

.info,
.message {
	padding: 10px;
}

.title,
.subtitle {
	font-weight: 300;
}

.title {
	color: #222324;
	font-size: 40px;
	line-height: 1;
	margin: 0;
}

.subtitle {
	font-size: 24px;
	line-height: 1.125;
	margin: 5px 0 20px;
}

.tag {
	background-color: #e62b8a;
	border-radius: 3px;
	box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.1);
	color: #fff;
	display: inline-block;
	font-size: 12px;
	height: 24px;
	line-height: 16px;
	padding: 4px 10px;
	vertical-align: top;
	white-space: nowrap;
}

.tag.is-info {
	background-color: #42afe3;
	vertical-align: baseline;
}

.button {
	background-color: #42afe3;
	border-radius: 3px;
	color: #fff;
	display: inline-block;
	font-size: 12px;
	height: 24px;
	line-height: 16px;
	padding: 4px 10px;
	text-decoration: none;
	transition: background-color 0.3s ease;
	-webkit-user-select: none;
	-moz-user-select: none;
	user-select: none;
	vertical-align: top;
	white-space: nowrap;
}

.button.is-danger {
	background-color: #e62b8a;
}

.button:hover,
.button:focus {
	background-color: #1f99d3;
	color: #fff;
}

.button.is-danger:hover,
.button.is-danger:focus {
	background-color: #c61770;
}

.button:focus {
	outline: 0 none;
}

.button:active {
	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.2);
}

.message-body {
	border: 1px solid #d3d6db;
	border-radius: 3px;
	margin: 0;
	padding: 12px 15px;
}

.grid {
	clear: left;
	overflow: hidden;
}

/* Announcement Styles */
.announcement-link {
	color: inherit;
	display: block;
	text-decoration: none;
}

.announcement {
	background-color: #fff;
	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1), 0 0 0 1px rgba(0, 0, 0, 0.1);
	float: left;
	margin: 10px;
	position: relative;
}

.announcement:not(.is-linked),
.announcement-link {
	border: 5px solid #000;
	display: flex;
	flex-direction: column;
	height: 100%;
	position: relative;
	transition: border-color 0.3s ease;
}

.announcement-link:hover,
.announcement-link:focus {
	border-color: #e62b8a;
	color: currentColor;
}

.announcement-link:focus {
	outline: 0 none;
}

.announcement img {
	flex: none;
	width: 100%;
}

[data-bubble="true"]::before {
	background-color: #e62b8a;
	border-bottom: 2px solid #000;
	color: #fff;
	content: attr(data-bubble-title);
	display: block;
	font-weight: bold;
	opacity: 1;
	padding: 0.25em 1em;
	position: absolute;
	text-transform: uppercase;
	top: 0;
	transition: border-color 0.3s ease, opacity 0.4s ease;
}

[data-bubble-direction="left"]::before {
	border-right: 2px solid #000;
	left: 0;
}

[data-bubble-direction="right"]::before {
	border-left: 2px solid #000;
	right: 0;
}

[data-bubble="true"]:hover::before {
	border-color: #e62b8a;
	opacity: 0;
}

.card {
	display: flex;
	flex: 1 1 auto;
	flex-direction: column;
	height: 100%;
	padding: 20px;
}

.card-title {
	margin-bottom: 1em;
	min-height: 69px;
}

.card-content {
	flex: 1 1 auto;
	margin: 0;
}

.announcement-title {
	color: #222324;
	font-size: 18px;
	font-weight: 300;
	line-height: 1;
	margin: 0;
}

.announcement-subtitle {
	font-size: 14px;
	font-weight: 300px;
	line-height: 1.125;
	margin: 0;
}

.card > .twitter-spacer {
	height: 28px;
}

.announcement > .twitter-share-button,
.announcement > img[src^="data:image/svg+xml"] {
	bottom: 20px;
	display: block;
	left: 20px;
	position: absolute !important;
	
}

hr {
	border: 0 none;
	border-top: 1px solid #d3d6db;
	display: block;
	height: 1px;
	margin: 20px 0;
	padding: 0;
}

hr.is-next {
	border-top: 5px solid #000;
	order: -1;
}

hr:nth-of-type(1):nth-last-of-type(1) {
	display: none;
}
/* End Announcement Styles */

.foundation {
	background-color: #ee3496;
	color: #fff;
	padding: 1rem;
	text-align: center;
}

.foundation a {
	color: inherit;
	text-decoration: none;
	transition: filter 0.3s ease;
}

.foundation a:focus {
	outline: 0 none;
}

.foundation a:active,
.foundation a:focus,
.foundation a:hover {
	filter: invert(100%);
}

.footer-grid {
	margin: 0 auto 1rem;
	max-width: 960px;
}

.branding {
	display: inline-block;
	flex: 1 1 33%;
	max-width: 400px;
	overflow: hidden;
	padding: 10px;
	vertical-align: top;
}

.tag-line {
	font-size: 1rem;
	font-style: italic;
	margin: 0;
}

#footer-logo {
	margin-bottom: -4.375%;
}

.site-map {
	flex: 1 1 33%;
	padding: 10px;
}

.site-map ul {
	list-style-type: none;
	margin: 0;
	padding: 0;
}

.site-map li {
	font-size: 17px;
	font-weight: bold;
}

.site-map li:not(:last-child) {
	margin-bottom: 0.2rem;
}

.fa-3x {
	flex: 1 1 33%;
	padding: 10px;
}

.social {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	list-style-type: none;
	margin: 0;
	padding: 0;
}

.social li {
	margin: 0 0.5rem;
}

.social a {
	display: block;
}

.copyright,
.terms {
	font-size: smaller;
	margin: 0;
}

.top {
	align-items: center;
	background-color: #00a160;
	background-color: rgba(0, 161, 96, 0.3);
	background-color: #00a1604d;
	bottom: 0.4em;
	color: #fff;
	display: flex;
	font-size: 35px;
	height: 55px;
	justify-content: center;
	opacity: 0;
	position: fixed;
	right: 0.4em;
	text-align: center;
	text-decoration: none;
	transition: background-color 0.3s ease, font-size 0.3s ease, height 0.3s ease, opacity 0.3s ease, visibility 0.3s ease, width 0.3s ease;
	visibility: hidden;
	width: 55px;
	z-index: 10;
}

.top:hover {
	background-color: #00a160;
	color: #fff;
}

.top.active {
	opacity: 1;
	visibility: visible;
}

.no-js .top {
	opacity: 1;
	visibility: visible;
}

@media (min-width: 517px) {
	.menu {
		display: flex;
		flex-wrap: wrap;
		justify-content: space-between;
	}
	.menu li {
		flex: 1 1 auto;
		margin-bottom: 0;
	}
}

@media (min-width: 550px) {
	.announcement {
		width: calc(50% - 20px);
	}
	.announcement:nth-child(2n + 1) {
		clear: left;
	}
}

@media (min-width: 768px) {
	.info {
		float: left;
		width: 33%;
	}
	.message {
		float: left;
		width: 67%;
	}
	.announcement:nth-child(2n + 1) {
		clear: none;
	}
	.announcement:nth-child(3n + 1) {
		clear: left;
	}
	.announcement {
		width: calc(33.3333% - 20px);
	}
	.footer-grid {
		align-items: center;
		display: flex;
		justify-content: space-between;
	}
	.social {
		justify-content: flex-end;
	}
}

@media (min-width: 980px) {
	.header-bar,
	.content,
	.menu {
		margin: 0 auto;
	}
}

@media (min-width: 1200px) {
	.top {
		font-size: 50px;
		height: 82px;
		width: 82px;
	}
}

@supports (position: sticky) or (position: -webkit-sticky) {
	@media (min-width: 640px) and (min-height: 550px) {
		.intob .nav-bar {
			position: -webkit-sticky;
			position: sticky;
			top: 0;
			transition: background-color 0.2s ease;
			z-index: 9;
		}
		.intob .nav-bar::after {
			background-color: #000;
			bottom: 0;
			content: " ";
			display: block;
			height: 5px;
			left: 0;
			opacity: 0;
			position: absolute;
			right: 0;
			transition: opacity 0.2s ease;
		}
		.intob .nav-bar.-sticky {
			background-color: #fff;
		}
		.intob .nav-bar.-sticky::after {
			opacity: 1;
		}
		.intob .-sticky .menu {
			border-color: transparent;
			transition-duration: 0s;
		}
	}
}

@supports (display: grid) {
	.convention-info {
		display: grid;
		grid-gap: 20px;
		grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
		padding: 10px;
	}
	.grid {
		display: grid;
		grid-column: 1 / -1;
		grid-gap: 20px;
		grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
	}
	.info,
	.message,
	.announcement {
		padding: 0 !important;
		width: 100% !important;
	}
	.announcement {
		margin: 0;
	}
	@media (min-width: 768px) {
		.message {
			grid-column: 2 / -1;
		}
	}
}

